@@ -1,6 +1,6 @@
-DIST facets-1.8.54.gem 416768 RMD160 38419a8441f3fbdde88f28cfaad2e4fc2e607fc1 SHA1 e52a41825cba3cc142cfd0fe579f84c6210852d7 SHA256 48235a808d8ac2de2d12ae4fa13545c46982f6a6b0dcfc7e1290494e64e1aad0
 DIST facets-2.5.0.gem 748032 RMD160 daa56762c5c35225b78cd01041c4e2c4304b7733 SHA1 1ec4ea0222fcc07e0c0d94cf025984de68c7520a SHA256 a530db904182341b4bb9c11cac75f78574ba0bfaded19bae18831cf4742cec9c
-EBUILD facets-1.8.54.ebuild 562 RMD160 a6e24c1110283fd2b41e26d00f6616e410bb7f4b SHA1 d374b71be124fa8b86390b71e2bb7e2c5aa9bb7a SHA256 e1a626834c860118b1d06f41139f408d3801bfe7533f6c967bd3969ed4bcff1a
+DIST facets-2.5.2.gem 752128 RMD160 1ec7fc9d6dd50cb92679cbefa4dd0395750aa56a SHA1 670c7f40ab4bde9dc6caaec2a2ed459851ef90da SHA256 fb2b5631e800c6b8f44d3b6b240675bb2183c88fc3f7638cec9241886ed53578
 EBUILD facets-2.5.0.ebuild 561 RMD160 7ba4cd1e456a42427336863de4ca7b8a58e575f3 SHA1 fa51fc0f19b9dd0bb814152d064b643c87615125 SHA256 114decd782ee7a74b0c900da7e1aadaca445244ff70d5bbf22a41c7cff75a0ba
-MISC ChangeLog 2699 RMD160 2f97ced79568dc5769c721c0904254eb74e19559 SHA1 16d9a4ac37bc64e55efd6eb2de0ba3d4c5a7d982 SHA256 c81ef95e448b1ed8db2cbdf708e9320d9902bf17cc2f3502d37fdeacfffed815
+EBUILD facets-2.5.2.ebuild 506 RMD160 5fe53ff9f93d8e5fe120c2d1980e45a902905ed8 SHA1 f437699010674d5d7bc777c2db3e71916f638d6a SHA256 19619ef37163d5d187c7dc145e8a55c40835429d48605ca2c33340a20103bcf7
+MISC ChangeLog 2936 RMD160 d4534e33a02cdcd9717e14cb17d4a69bc5cc2d43 SHA1 0fab6bbe9dbcad20d0df03429b7831536fac1de4 SHA256 62b0a24aeeeb2a2fe2cf5d939acb631ce7764e7467f5d3a035d0d7ffc377f9e9
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
