@@ -1,14 +1,13 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facets/facets-1.8.54.ebuild,v 1.2 2008/02/29 15:18:31 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facets/facets-2.5.2.ebuild,v 1.1 2009/05/19 05:47:24 graaff Exp $
 
-inherit ruby gems
+inherit gems
 
 USE_RUBY="ruby18"
 
 DESCRIPTION="Facets is an extension library adding extra functionality to Ruby"
 HOMEPAGE="http://facets.rubyforge.org/"
-SRC_URI="http://gems.rubyforge.org/gems/${P}.gem"
 
 LICENSE="Ruby"
 SLOT="0"
